HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/HeapAllocatorRawCallRequiresUnsafe/Expected.uv
//! Expected diagnostic metadata for the HeapAllocatorRawCallRequiresUnsafe rejected-source specimen.

expectedDiagnostic("E-MEM-3030", "req.14.HeapAllocatorRawCallsRequireUnsafe")
